--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,17 @@
-[tool.poetry]
+[project]
 name = "python-perks"
 version = "1.0.0"
 description = "A repository for Python course notes, examples, and lab exercises targeted to students, professionals, and enthusiasts."
-authors = ["Sudip Ghimire <ghimiresdp@gmail.com>"]
+authors = [{ name = "Sudip Ghimire", email = "ghimiresdp@gmail.com" }]
 license = "MIT"
 readme = "README.md"
-package-mode = false
+requires-python = ">=3.10"
 
-[tool.poetry.dependencies]
-python = ">=3.10"
-requests = "^2.32.3"
+dependencies = ["requests>=2.32.3"]
 
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.8.1"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[dependency-groups]
+dev = ["ruff>=0.8.4"]
+test = ["pytest>=8.3.4"]
 
 [tool.ruff]
 line-length = 88
@@ -57,3 +51,25 @@ exclude = [
 quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = false
+
+# poetry is now deprecated
+[tool.poetry]
+name = "python-perks"
+version = "1.0.0"
+description = "A repository for Python course notes, examples, and lab exercises targeted to students, professionals, and enthusiasts."
+authors = ["Sudip Ghimire <ghimiresdp@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+package-mode = false
+
+[tool.poetry.dependencies]
+python = ">=3.10"
+requests = "^2.32.3"
+
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.8.1"
+
+# [build-system]
+# requires = ["poetry-core"]
+# build-backend = "poetry.core.masonry.api"
